[gd_scene load_steps=60 format=2]

[ext_resource path="res://ofont.ru_Woodstick.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://lvl1.png" type="Texture" id=2]
[ext_resource path="res://lvl2.png" type="Texture" id=3]
[ext_resource path="res://lvl3.png" type="Texture" id=4]
[ext_resource path="res://lvl4.png" type="Texture" id=5]
[ext_resource path="res://lvl5.png" type="Texture" id=6]
[ext_resource path="res://lvl6.png" type="Texture" id=7]
[ext_resource path="res://lvl7.png" type="Texture" id=8]
[ext_resource path="res://lvl8.png" type="Texture" id=9]
[ext_resource path="res://lvl9.png" type="Texture" id=10]
[ext_resource path="res://lvl10.png" type="Texture" id=11]
[ext_resource path="res://lvl11.png" type="Texture" id=12]
[ext_resource path="res://lvl12.png" type="Texture" id=13]
[ext_resource path="res://lvl_select.gd" type="Script" id=14]
[ext_resource path="res://lvl13.png" type="Texture" id=15]
[ext_resource path="res://lvl14.png" type="Texture" id=16]
[ext_resource path="res://lvl15.png" type="Texture" id=17]
[ext_resource path="res://lvl16.png" type="Texture" id=18]
[ext_resource path="res://lvl17.png" type="Texture" id=19]
[ext_resource path="res://lvl18.png" type="Texture" id=20]
[ext_resource path="res://lvl19.png" type="Texture" id=21]
[ext_resource path="res://lvl20.png" type="Texture" id=22]
[ext_resource path="res://lvl/lvl21.png" type="Texture" id=23]
[ext_resource path="res://lvl/lvl22.png" type="Texture" id=24]
[ext_resource path="res://lvl/lvl23.png" type="Texture" id=25]
[ext_resource path="res://lvl/lvl24.png" type="Texture" id=26]
[ext_resource path="res://lvl/lvl25.png" type="Texture" id=27]
[ext_resource path="res://lvl/lvl26.png" type="Texture" id=28]
[ext_resource path="res://lvl/lvl27.png" type="Texture" id=29]
[ext_resource path="res://lvl/lvl28.png" type="Texture" id=30]
[ext_resource path="res://lvl/lvl29.png" type="Texture" id=31]
[ext_resource path="res://lvl/lvl30.png" type="Texture" id=32]
[ext_resource path="res://lvl/lvl31.png" type="Texture" id=33]
[ext_resource path="res://lvl/lvl33.png" type="Texture" id=34]
[ext_resource path="res://lvl/lvl32.png" type="Texture" id=35]
[ext_resource path="res://lvl/level35.png" type="Texture" id=36]
[ext_resource path="res://lvl/lvl34.png" type="Texture" id=37]
[ext_resource path="res://lvl/level36.png" type="Texture" id=38]
[ext_resource path="res://lvl/level37.png" type="Texture" id=39]
[ext_resource path="res://lvl/level39.png" type="Texture" id=40]
[ext_resource path="res://lvl/level40.png" type="Texture" id=41]
[ext_resource path="res://lvl/level41.png" type="Texture" id=42]
[ext_resource path="res://lvl/level42.png" type="Texture" id=43]
[ext_resource path="res://lvl/level38.png" type="Texture" id=44]
[ext_resource path="res://lvl/level45.png" type="Texture" id=45]
[ext_resource path="res://lvl/level48.png" type="Texture" id=46]
[ext_resource path="res://lvl/level50.png" type="Texture" id=47]
[ext_resource path="res://lvl/level46.png" type="Texture" id=48]
[ext_resource path="res://lvl/level43.png" type="Texture" id=49]
[ext_resource path="res://lvl/level47.png" type="Texture" id=50]
[ext_resource path="res://lvl/level49.png" type="Texture" id=51]
[ext_resource path="res://lvl/level44.png" type="Texture" id=52]
[ext_resource path="res://Home_icon-icons.com_55890.png" type="Texture" id=53]
[ext_resource path="res://lvl/level53.png" type="Texture" id=54]
[ext_resource path="res://lvl/level52.png" type="Texture" id=55]
[ext_resource path="res://lvl/level51.png" type="Texture" id=56]
[ext_resource path="res://lvl/level54.png" type="Texture" id=57]
[ext_resource path="res://lvl/level55.png" type="Texture" id=58]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="lvl_select" type="Control"]
margin_right = 1920.0
margin_bottom = 1072.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1072.0
color = Color( 0.219608, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 752.0
margin_top = 16.0
margin_right = 1169.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "Выбор уровня"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levels" type="ItemList" parent="."]
margin_top = 88.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="levels"]
margin_left = 8.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 112.0
text = "1"
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="levels"]
margin_left = 136.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 112.0
text = "2"
icon = ExtResource( 3 )
expand_icon = true

[node name="3" type="Button" parent="levels"]
margin_left = 264.0
margin_top = 16.0
margin_right = 376.0
margin_bottom = 112.0
text = "3"
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="levels"]
margin_left = 392.0
margin_top = 16.0
margin_right = 504.0
margin_bottom = 112.0
text = "4"
icon = ExtResource( 5 )
expand_icon = true

[node name="5" type="Button" parent="levels"]
margin_left = 520.0
margin_top = 16.0
margin_right = 632.0
margin_bottom = 112.0
text = "5"
icon = ExtResource( 6 )
expand_icon = true

[node name="6" type="Button" parent="levels"]
margin_left = 648.0
margin_top = 16.0
margin_right = 760.0
margin_bottom = 112.0
text = "6"
icon = ExtResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Button" parent="levels"]
margin_left = 776.0
margin_top = 16.0
margin_right = 888.0
margin_bottom = 112.0
text = "7"
icon = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Button" parent="levels"]
margin_left = 904.0
margin_top = 16.0
margin_right = 1016.0
margin_bottom = 112.0
text = "8"
icon = ExtResource( 9 )
expand_icon = true

[node name="9" type="Button" parent="levels"]
margin_left = 1032.0
margin_top = 16.0
margin_right = 1144.0
margin_bottom = 112.0
text = "9"
icon = ExtResource( 10 )
expand_icon = true

[node name="10" type="Button" parent="levels"]
margin_left = 1160.0
margin_top = 16.0
margin_right = 1272.0
margin_bottom = 112.0
text = "10"
icon = ExtResource( 11 )
expand_icon = true

[node name="11" type="Button" parent="levels"]
margin_left = 1288.0
margin_top = 16.0
margin_right = 1400.0
margin_bottom = 112.0
text = "11"
icon = ExtResource( 12 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="12" type="Button" parent="levels"]
margin_left = 1416.0
margin_top = 16.0
margin_right = 1528.0
margin_bottom = 112.0
text = "12"
icon = ExtResource( 13 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="13" type="Button" parent="levels"]
margin_left = 1544.0
margin_top = 16.0
margin_right = 1656.0
margin_bottom = 112.0
text = "13"
icon = ExtResource( 15 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="14" type="Button" parent="levels"]
margin_left = 1672.0
margin_top = 16.0
margin_right = 1784.0
margin_bottom = 112.0
text = "14"
icon = ExtResource( 16 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="15" type="Button" parent="levels"]
margin_left = 1800.0
margin_top = 16.0
margin_right = 1912.0
margin_bottom = 112.0
text = "15"
icon = ExtResource( 17 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="16" type="Button" parent="levels"]
margin_left = 8.0
margin_top = 120.0
margin_right = 120.0
margin_bottom = 216.0
text = "16"
icon = ExtResource( 18 )
expand_icon = true

[node name="17" type="Button" parent="levels"]
margin_left = 136.0
margin_top = 120.0
margin_right = 248.0
margin_bottom = 216.0
text = "17"
icon = ExtResource( 19 )
expand_icon = true

[node name="18" type="Button" parent="levels"]
margin_left = 264.0
margin_top = 120.0
margin_right = 376.0
margin_bottom = 216.0
text = "18"
icon = ExtResource( 20 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="19" type="Button" parent="levels"]
margin_left = 392.0
margin_top = 120.0
margin_right = 504.0
margin_bottom = 216.0
text = "19"
icon = ExtResource( 21 )
expand_icon = true

[node name="20" type="Button" parent="levels"]
margin_left = 520.0
margin_top = 120.0
margin_right = 632.0
margin_bottom = 216.0
text = "20"
icon = ExtResource( 22 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="21" type="Button" parent="levels"]
margin_left = 648.0
margin_top = 120.0
margin_right = 760.0
margin_bottom = 216.0
text = "21"
icon = ExtResource( 23 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="22" type="Button" parent="levels"]
margin_left = 776.0
margin_top = 120.0
margin_right = 888.0
margin_bottom = 216.0
text = "22"
icon = ExtResource( 24 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="23" type="Button" parent="levels"]
margin_left = 904.0
margin_top = 120.0
margin_right = 1016.0
margin_bottom = 216.0
text = "23"
icon = ExtResource( 25 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="24" type="Button" parent="levels"]
margin_left = 1032.0
margin_top = 120.0
margin_right = 1144.0
margin_bottom = 216.0
text = "24"
icon = ExtResource( 26 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="25" type="Button" parent="levels"]
margin_left = 1160.0
margin_top = 120.0
margin_right = 1272.0
margin_bottom = 216.0
text = "25"
icon = ExtResource( 27 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="26" type="Button" parent="levels"]
margin_left = 1288.0
margin_top = 120.0
margin_right = 1400.0
margin_bottom = 216.0
text = "26"
icon = ExtResource( 28 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="27" type="Button" parent="levels"]
margin_left = 1416.0
margin_top = 120.0
margin_right = 1528.0
margin_bottom = 216.0
text = "27"
icon = ExtResource( 29 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="28" type="Button" parent="levels"]
margin_left = 1544.0
margin_top = 120.0
margin_right = 1656.0
margin_bottom = 216.0
text = "28"
icon = ExtResource( 30 )
expand_icon = true

[node name="29" type="Button" parent="levels"]
margin_left = 1672.0
margin_top = 120.0
margin_right = 1784.0
margin_bottom = 216.0
text = "29"
icon = ExtResource( 31 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="30" type="Button" parent="levels"]
margin_left = 1800.0
margin_top = 120.0
margin_right = 1912.0
margin_bottom = 216.0
text = "30"
icon = ExtResource( 32 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="31" type="Button" parent="levels"]
margin_left = 8.0
margin_top = 224.0
margin_right = 120.0
margin_bottom = 320.0
text = "31"
icon = ExtResource( 33 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="32" type="Button" parent="levels"]
margin_left = 136.0
margin_top = 224.0
margin_right = 248.0
margin_bottom = 320.0
text = "32"
icon = ExtResource( 35 )
expand_icon = true

[node name="33" type="Button" parent="levels"]
margin_left = 264.0
margin_top = 224.0
margin_right = 376.0
margin_bottom = 320.0
text = "33"
icon = ExtResource( 34 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="34" type="Button" parent="levels"]
margin_left = 392.0
margin_top = 224.0
margin_right = 504.0
margin_bottom = 320.0
text = "34"
icon = ExtResource( 37 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="35" type="Button" parent="levels"]
margin_left = 520.0
margin_top = 224.0
margin_right = 632.0
margin_bottom = 320.0
text = "35"
icon = ExtResource( 36 )
expand_icon = true

[node name="36" type="Button" parent="levels"]
margin_left = 648.0
margin_top = 224.0
margin_right = 760.0
margin_bottom = 320.0
text = "36"
icon = ExtResource( 38 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="37" type="Button" parent="levels"]
margin_left = 776.0
margin_top = 224.0
margin_right = 888.0
margin_bottom = 320.0
text = "37"
icon = ExtResource( 39 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="38" type="Button" parent="levels"]
margin_left = 904.0
margin_top = 224.0
margin_right = 1016.0
margin_bottom = 320.0
text = "38"
icon = ExtResource( 44 )
expand_icon = true

[node name="39" type="Button" parent="levels"]
margin_left = 1032.0
margin_top = 224.0
margin_right = 1144.0
margin_bottom = 320.0
text = "39"
icon = ExtResource( 40 )
expand_icon = true

[node name="40" type="Button" parent="levels"]
margin_left = 1160.0
margin_top = 224.0
margin_right = 1272.0
margin_bottom = 320.0
text = "40"
icon = ExtResource( 41 )
expand_icon = true

[node name="41" type="Button" parent="levels"]
margin_left = 1288.0
margin_top = 224.0
margin_right = 1400.0
margin_bottom = 320.0
text = "41"
icon = ExtResource( 42 )
expand_icon = true

[node name="42" type="Button" parent="levels"]
margin_left = 1416.0
margin_top = 224.0
margin_right = 1528.0
margin_bottom = 320.0
text = "42"
icon = ExtResource( 43 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="43" type="Button" parent="levels"]
margin_left = 1544.0
margin_top = 224.0
margin_right = 1656.0
margin_bottom = 320.0
text = "43"
icon = ExtResource( 49 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="44" type="Button" parent="levels"]
margin_left = 1672.0
margin_top = 224.0
margin_right = 1784.0
margin_bottom = 320.0
text = "44"
icon = ExtResource( 52 )
expand_icon = true

[node name="45" type="Button" parent="levels"]
margin_left = 1800.0
margin_top = 224.0
margin_right = 1912.0
margin_bottom = 320.0
text = "45"
icon = ExtResource( 45 )
expand_icon = true

[node name="46" type="Button" parent="levels"]
margin_left = 8.0
margin_top = 328.0
margin_right = 120.0
margin_bottom = 424.0
text = "46"
icon = ExtResource( 48 )
expand_icon = true

[node name="47" type="Button" parent="levels"]
margin_left = 136.0
margin_top = 328.0
margin_right = 248.0
margin_bottom = 424.0
text = "47"
icon = ExtResource( 50 )
expand_icon = true

[node name="48" type="Button" parent="levels"]
margin_left = 264.0
margin_top = 328.0
margin_right = 376.0
margin_bottom = 424.0
text = "48"
icon = ExtResource( 46 )
expand_icon = true

[node name="49" type="Button" parent="levels"]
margin_left = 392.0
margin_top = 328.0
margin_right = 504.0
margin_bottom = 424.0
text = "49"
icon = ExtResource( 51 )
expand_icon = true

[node name="50" type="Button" parent="levels"]
margin_left = 520.0
margin_top = 328.0
margin_right = 632.0
margin_bottom = 424.0
text = "50"
icon = ExtResource( 47 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="51" type="Button" parent="levels"]
margin_left = 648.0
margin_top = 328.0
margin_right = 760.0
margin_bottom = 424.0
text = "51"
icon = ExtResource( 56 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="52" type="Button" parent="levels"]
margin_left = 776.0
margin_top = 328.0
margin_right = 888.0
margin_bottom = 424.0
text = "52"
icon = ExtResource( 55 )
expand_icon = true

[node name="53" type="Button" parent="levels"]
margin_left = 904.0
margin_top = 328.0
margin_right = 1016.0
margin_bottom = 424.0
text = "53"
icon = ExtResource( 54 )
expand_icon = true

[node name="54" type="Button" parent="levels"]
margin_left = 1032.0
margin_top = 328.0
margin_right = 1144.0
margin_bottom = 424.0
text = "54"
icon = ExtResource( 57 )
expand_icon = true

[node name="55" type="Button" parent="levels"]
margin_left = 1160.0
margin_top = 328.0
margin_right = 1272.0
margin_bottom = 424.0
text = "55"
icon = ExtResource( 58 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_home" type="Button" parent="."]
margin_right = 80.0
margin_bottom = 88.0
icon = ExtResource( 53 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="levels/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="levels/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="levels/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="levels/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="levels/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="levels/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="levels/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="levels/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="levels/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="levels/10" to="." method="_on_10_pressed"]
[connection signal="pressed" from="levels/11" to="." method="_on_11_pressed"]
[connection signal="pressed" from="levels/12" to="." method="_on_12_pressed"]
[connection signal="pressed" from="levels/13" to="." method="_on_13_pressed"]
[connection signal="pressed" from="levels/14" to="." method="_on_14_pressed"]
[connection signal="pressed" from="levels/15" to="." method="_on_15_pressed"]
[connection signal="pressed" from="levels/16" to="." method="_on_16_pressed"]
[connection signal="pressed" from="levels/17" to="." method="_on_17_pressed"]
[connection signal="pressed" from="levels/18" to="." method="_on_18_pressed"]
[connection signal="pressed" from="levels/19" to="." method="_on_19_pressed"]
[connection signal="pressed" from="levels/20" to="." method="_on_20_pressed"]
[connection signal="pressed" from="levels/21" to="." method="_on_21_pressed"]
[connection signal="pressed" from="levels/22" to="." method="_on_22_pressed"]
[connection signal="pressed" from="levels/23" to="." method="_on_23_pressed"]
[connection signal="pressed" from="levels/24" to="." method="_on_24_pressed"]
[connection signal="pressed" from="levels/25" to="." method="_on_25_pressed"]
[connection signal="pressed" from="levels/26" to="." method="_on_26_pressed"]
[connection signal="pressed" from="levels/27" to="." method="_on_27_pressed"]
[connection signal="pressed" from="levels/28" to="." method="_on_28_pressed"]
[connection signal="pressed" from="levels/29" to="." method="_on_29_pressed"]
[connection signal="pressed" from="levels/30" to="." method="_on_30_pressed"]
[connection signal="pressed" from="levels/31" to="." method="_on_31_pressed"]
[connection signal="pressed" from="levels/32" to="." method="_on_32_pressed"]
[connection signal="pressed" from="levels/33" to="." method="_on_33_pressed"]
[connection signal="pressed" from="levels/34" to="." method="_on_34_pressed"]
[connection signal="pressed" from="levels/35" to="." method="_on_35_pressed"]
[connection signal="pressed" from="levels/36" to="." method="_on_36_pressed"]
[connection signal="pressed" from="levels/37" to="." method="_on_37_pressed"]
[connection signal="pressed" from="levels/38" to="." method="_on_38_pressed"]
[connection signal="pressed" from="levels/39" to="." method="_on_39_pressed"]
[connection signal="pressed" from="levels/40" to="." method="_on_40_pressed"]
[connection signal="pressed" from="levels/41" to="." method="_on_41_pressed"]
[connection signal="pressed" from="levels/42" to="." method="_on_42_pressed"]
[connection signal="pressed" from="levels/43" to="." method="_on_43_pressed"]
[connection signal="pressed" from="levels/44" to="." method="_on_44_pressed"]
[connection signal="pressed" from="levels/45" to="." method="_on_45_pressed"]
[connection signal="pressed" from="levels/46" to="." method="_on_46_pressed"]
[connection signal="pressed" from="levels/47" to="." method="_on_47_pressed"]
[connection signal="pressed" from="levels/48" to="." method="_on_48_pressed"]
[connection signal="pressed" from="levels/49" to="." method="_on_49_pressed"]
[connection signal="pressed" from="levels/50" to="." method="_on_50_pressed"]
[connection signal="pressed" from="levels/51" to="." method="_on_51_pressed"]
[connection signal="pressed" from="levels/52" to="." method="_on_52_pressed"]
[connection signal="pressed" from="levels/53" to="." method="_on_53_pressed"]
[connection signal="pressed" from="levels/54" to="." method="_on_54_pressed"]
[connection signal="pressed" from="levels/55" to="." method="_on_55_pressed"]
[connection signal="pressed" from="btn_home" to="." method="_on_btn_home_pressed"]
