extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.



func _on_1_pressed():
	var _err = get_tree().change_scene("res://game.tscn")
func _on_2_pressed():
	var _err = get_tree().change_scene("res://level2.tscn")
func _on_3_pressed():
	var _err = get_tree().change_scene("res://level3.tscn")
func _on_4_pressed():
	var _err = get_tree().change_scene("res://level4.tscn")
func _on_5_pressed():
	var _err = get_tree().change_scene("res://level5.tscn")
func _on_6_pressed():
	var _err = get_tree().change_scene("res://level6.tscn")
func _on_7_pressed():
	var _err = get_tree().change_scene("res://level7.tscn")
func _on_8_pressed():
	var _err = get_tree().change_scene("res://level8.tscn")
func _on_9_pressed():
	var _err = get_tree().change_scene("res://level9.tscn")
func _on_10_pressed():
	var _err = get_tree().change_scene("res://level10.tscn")
func _on_11_pressed():
	var _err = get_tree().change_scene("res://level11.tscn")
func _on_12_pressed():
	var _err = get_tree().change_scene("res://level12.tscn")
func _on_13_pressed():
	var _err = get_tree().change_scene("res://level13.tscn")
func _on_14_pressed():
	var _err = get_tree().change_scene("res://level14.tscn")
func _on_15_pressed():
	var _err = get_tree().change_scene("res://level15.tscn")
func _on_16_pressed():
	var _err = get_tree().change_scene("res://level16.tscn")
func _on_17_pressed():
	var _err = get_tree().change_scene("res://level17.tscn")
func _on_18_pressed():
	var _err = get_tree().change_scene("res://level18.tscn")
func _on_19_pressed():
	var _err = get_tree().change_scene("res://level19.tscn")
func _on_20_pressed():
	var _err = get_tree().change_scene("res://level20.tscn")
func _on_21_pressed():
	var _err = get_tree().change_scene("res://level21.tscn")
func _on_22_pressed():
	var _err = get_tree().change_scene("res://lvl/level22.tscn")
func _on_23_pressed():
	var _err = get_tree().change_scene("res://lvl/level23.tscn")
func _on_24_pressed():
	var _err = get_tree().change_scene("res://lvl/level24.tscn")
func _on_25_pressed():
	var _err = get_tree().change_scene("res://lvl/level25.tscn")
func _on_26_pressed():
	var _err = get_tree().change_scene("res://lvl/level26.tscn")
func _on_27_pressed():
	var _err = get_tree().change_scene("res://lvl/level27.tscn")
func _on_28_pressed():
	var _err = get_tree().change_scene("res://lvl/level28.tscn")
func _on_29_pressed():
	var _err = get_tree().change_scene("res://lvl/level29.tscn")
func _on_30_pressed():
	var _err = get_tree().change_scene("res://lvl/level30.tscn")
func _on_31_pressed():
	var _err = get_tree().change_scene("res://lvl/level31.tscn")
func _on_32_pressed():
	var _err = get_tree().change_scene("res://lvl/level32.tscn")
func _on_33_pressed():
	var _err = get_tree().change_scene("res://lvl/level33.tscn")
func _on_34_pressed():
	var _err = get_tree().change_scene("res://lvl/level34.tscn")
func _on_35_pressed():
	var _err = get_tree().change_scene("res://level35.tscn")
func _on_36_pressed():
	var _err = get_tree().change_scene("res://lvl/level36.tscn")
func _on_37_pressed():
	var _err = get_tree().change_scene("res://lvl/level37.tscn")
func _on_38_pressed():
	var _err = get_tree().change_scene("res://lvl/level38.tscn")
func _on_39_pressed():
	var _err = get_tree().change_scene("res://lvl/level39.tscn")
func _on_40_pressed():
	var _err = get_tree().change_scene("res://lvl/level40.tscn")
func _on_41_pressed():
	var _err = get_tree().change_scene("res://lvl/level41.tscn")
func _on_42_pressed():
	var _err = get_tree().change_scene("res://lvl/level42.tscn")
func _on_43_pressed():
	var _err = get_tree().change_scene("res://lvl/level43.tscn")
func _on_44_pressed():
	var _err = get_tree().change_scene("res://lvl/level44.tscn")
func _on_45_pressed():
	var _err = get_tree().change_scene("res://lvl/level45.tscn")
func _on_46_pressed():
	var _err = get_tree().change_scene("res://lvl/level46.tscn")
func _on_47_pressed():
	var _err = get_tree().change_scene("res://lvl/level47.tscn")
func _on_48_pressed():
	var _err = get_tree().change_scene("res://lvl/level48.tscn")
func _on_49_pressed():
	var _err = get_tree().change_scene("res://lvl/level49.tscn")
func _on_50_pressed():
	var _err = get_tree().change_scene("res://lvl/level50.tscn")
func _on_51_pressed():
	var _err = get_tree().change_scene("res://lvl/level51.tscn")
func _on_btn_home_pressed():
	var _err = get_tree().change_scene("res://Menu.tscn")
func _on_52_pressed():
	var _err = get_tree().change_scene("res://lvl/level52.tscn")
func _on_53_pressed():
	var _err = get_tree().change_scene("res://lvl/level53.tscn")
func _on_54_pressed():
	var _err = get_tree().change_scene("res://lvl/level54.tscn")
func _on_55_pressed():
	var _err = get_tree().change_scene("res://lvl/level55.tscn")
